--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="tab_settings">Ajustes</string>
     <string name="tab_overview">Resumen</string>
@@ -224,4 +224,4 @@
     <string name="estimated_run_out_date">Fecha estimada de agotamiento</string>
     <string name="create_calendar_entry">Crear entrada de calendario</string>
     <string name="notes">Notas</string>
-</resources>
+<string name="automatically_taken">Marcar automáticamente como tomada</string></resources>
