--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources xmlns:ns0="http://schemas.android.com/tools">
     <string name="tab_settings">Paramètres</string>
     <string name="tab_overview">Aperçu</string>
@@ -224,4 +224,4 @@
     <string name="estimated_run_out_date">Date d\'épuisement estimée</string>
     <string name="create_calendar_entry">Créer une entrée de calendrier</string>
     <string name="notes">Remarques</string>
-</resources>
+<string name="automatically_taken">Marquer automatiquement comme pris</string></resources>
