--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="tab_settings">Configurações</string>
     <string name="cancel">Cancelar</string>
@@ -224,4 +224,4 @@
     <string name="estimated_run_out_date">Data estimada de término</string>
     <string name="create_calendar_entry">Criar entrada na agenda</string>
     <string name="notes">Anotações</string>
-</resources>
+<string name="automatically_taken">Marcar automaticamente como realizado</string></resources>
