--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -219,4 +219,5 @@
     <string name="estimated_run_out_date">மதிப்பிடப்பட்ட தீர்ந்துபோகும் தேதி</string>
     <string name="create_calendar_entry">காலண்டர் உள்ளீட்டை உருவாக்கவும்</string>
     <string name="notes">குறிப்புகள்</string>
+    <string name="automatically_taken">தானாகவே எடுத்ததாகக் குறிக்கவும்</string>
 </resources>
