--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,3 +1,4 @@
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="tab_settings">Ayarlar</string>
     <string name="tab_overview">Genel Bakış</string>
@@ -218,4 +219,4 @@
     <string name="estimated_run_out_date">Tahmini Bitiş Tarihi</string>
     <string name="create_calendar_entry">Takvim girişi oluştur</string>
     <string name="notes">Notlar</string>
-</resources>
+<string name="automatically_taken">Otomatik olarak alındı olarak işaretle</string></resources>
