--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,3 +1,4 @@
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="tab_settings">设置</string>
     <string name="tab_overview">主页</string>
@@ -213,4 +214,4 @@
     <string name="estimated_run_out_date">预计用完日期</string>
     <string name="create_calendar_entry">创建日历条目</string>
     <string name="notes">笔记</string>
-</resources>
+<string name="automatically_taken">自动标记为已拍摄</string></resources>
