--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -222,4 +222,5 @@
     <string name="estimated_run_out_date">Estimated run out date</string>
     <string name="create_calendar_entry">Create calendar entry</string>
     <string name="notes">Notes</string>
+    <string name="automatically_taken">Automatically mark as taken</string>
 </resources>
