Fix lint issues

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -239,4 +239,4 @@
     <string name="estimated_run_out_date">تاريخ النفاد التقديري</string>
     <string name="create_calendar_entry">أنشئ إدخال تقويم</string>
     <string name="notes">ملاحظات</string>
-<string name="automatically_taken">وضع علامة &amp;quot;مأخوذة&amp;quot; تلقائياً</string></resources>
+<string name="automatically_taken">وضع علامة &amp;quot;مأخوذة&amp;quot; تلقائياً</string><string name="sort">فرز</string></resources>
