--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -219,4 +219,4 @@
     <string name="estimated_run_out_date">Beräknat slutdatum</string>
     <string name="create_calendar_entry">Skapa kalenderpost</string>
     <string name="notes">Anteckningar</string>
-<string name="automatically_taken">Markera automatiskt som tagen</string></resources>
+<string name="automatically_taken">Markera automatiskt som tagen</string><string name="sort">Sortera</string></resources>
