--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="restore_start">இது அனைத்து மருந்து அமைப்புகள் மற்றும்/அல்லது நினைவூட்டல் நிகழ்வுகளை மாற்றும்.\n\n தொடரவா?</string>
     <string name="log_additional_dose">கூடுதல் டோச் பதிவு</string>
@@ -220,4 +220,5 @@
     <string name="create_calendar_entry">காலண்டர் உள்ளீட்டை உருவாக்கவும்</string>
     <string name="notes">குறிப்புகள்</string>
     <string name="automatically_taken">தானாகவே எடுத்ததாகக் குறிக்கவும்</string>
+    <string name="sort">Sort</string>
 </resources>
