--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -224,4 +224,4 @@
     <string name="estimated_run_out_date">Data di scadenza stimata</string>
     <string name="create_calendar_entry">Crea voce di calendario</string>
     <string name="notes">Note</string>
-<string name="automatically_taken">Contrassegnare automaticamente come scattato</string></resources>
+<string name="automatically_taken">Contrassegnare automaticamente come scattato</string><string name="sort">Ordinamento</string></resources>
