--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -219,4 +219,4 @@
     <string name="estimated_run_out_date">Tahmini Bitiş Tarihi</string>
     <string name="create_calendar_entry">Takvim girişi oluştur</string>
     <string name="notes">Notlar</string>
-<string name="automatically_taken">Otomatik olarak alındı olarak işaretle</string></resources>
+<string name="automatically_taken">Otomatik olarak alındı olarak işaretle</string><string name="sort">Sırala</string></resources>
