--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -229,4 +229,4 @@
     <string name="estimated_run_out_date">Орієнтовна дата закінчення</string>
     <string name="create_calendar_entry">Створити запис у календарі</string>
     <string name="notes">Нотатки</string>
-<string name="automatically_taken">Автоматично позначити як знято</string></resources>
+<string name="automatically_taken">Автоматично позначити як знято</string><string name="sort">Сортування</string></resources>
