--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -214,4 +214,4 @@
     <string name="estimated_run_out_date">预计用完日期</string>
     <string name="create_calendar_entry">创建日历条目</string>
     <string name="notes">笔记</string>
-<string name="automatically_taken">自动标记为已拍摄</string></resources>
+<string name="automatically_taken">自动标记为已拍摄</string><string name="sort">分类</string></resources>
