--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -220,4 +220,5 @@
     <string name="create_calendar_entry">Kalendereintrag erstellen</string>
     <string name="notes">Notizen</string>
     <string name="automatically_taken">Automatisch als eingenommen markieren</string>
-<string name="sort">Sort</string></resources>
+    <string name="sort">Sort</string>
+</resources>
