--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -226,4 +226,6 @@
     <string name="estimated_run_out_date">Предполагаемая дата окончания</string>
     <string name="create_calendar_entry">Создать запись в календаре</string>
     <string name="notes">Заметки</string>
-<string name="automatically_taken">Автоматически помечайте как принятые</string><string name="sort">Сортировать</string></resources>
+    <string name="automatically_taken">Автоматически помечайте как принятые</string>
+    <string name="sort">Сортировать</string>
+</resources>
