--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -221,4 +221,6 @@
     <string name="notes">Notlar</string>
     <string name="automatically_taken">Otomatik olarak alındı olarak işaretle</string>
     <string name="sort">Sırala</string>
+    <string name="high_and_alarm">Yüksek + Alarm</string>
+    <string name="enable_notification_alarm_dialog">Hatırlatıcıların alarm olarak gösterilmesine izin vermek için aşağıdaki menüden MedTimer için bunu etkinleştirin</string>
 </resources>
