Add missing Bulgarian strings

--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -210,6 +210,8 @@
     <string name="create_calendar_entry">Създаване на запис в календара</string>
     <string name="notes">Записки</string>
     <string name="automatically_taken">Автоматично отбелязване като взети</string>
+    <string name="high_and_alarm">Висок + Аларма</string>
+    <string name="enable_notification_alarm_dialog">За да разрешите показването на напомняния като аларми, активирайте това за MedTimer в следващото меню</string>
     <string name="intro_overview_description">На екрана за преглед може да се видят бъдещите и последните напомняния. Напомнянията могат да бъдат променени чрез плъзгане в дясно и триене - в ляво.\n\nОсвен това може да се добавят допълнителни дози от конфигурираните лекарства или друго.</string>
     <string name="intro_analysis_description">Приложението запазва всички напомняния. Може да се анализират миналите дози в екрана за анализ и да се експортира историята чрез кебаб менюто(трите точки). Историята ще остане дори при изтриване или преименуване на лекарствата или напомнянията.</string>
     <string name="once_below_threshold">Веднъж при падане под прага</string>
