--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -227,4 +227,6 @@
     <string name="enable_notification_alarm_dialog">In order to allow showing reminders as alarms enable this for MedTimer in the following menu</string>
     <string name="continuous">Continuous</string>
     <string name="daily">Daily</string>
+    <string name="daily_from_to">Daily interval from %1s to %2s</string>
+    <string name="continuous_from">Continuous interval starting from %1s</string>
 </resources>
