--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -89,7 +89,7 @@
     <string name="every_day">Todos los días</string>
     <string name="cycle_pause_days">Días de pausa</string>
     <string name="cycle_start_date">Inicio del primer ciclo</string>
-    <string name="cycle_reminders">Recordatorios cíclicos</string>
+    <string name="cycle_reminder">Recordatorios cíclicos</string>
     <string name="weekday_limited">Limitado a algunos días laborables</string>
     <string name="reminders">Recordatorios</string>
     <string name="filter">Filtro</string>
