--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -78,7 +78,7 @@
     <string name="remind_on">Lembrar</string>
     <string name="every_day">Diariamente</string>
     <string name="cycle_pause_days">Dias de pausa</string>
-    <string name="cycle_reminders">Lembretes cíclicos</string>
+    <string name="cycle_reminder">Lembretes cíclicos</string>
     <string name="reminders">Lembretes</string>
     <string name="filter">Filtro</string>
     <string name="seven_days">7 dias</string>
