--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,7 +88,7 @@
     <string name="every_day">Every day</string>
     <string name="cycle_pause_days">Pause days</string>
     <string name="cycle_start_date">First cycle start</string>
-    <string name="cycle_reminders">Cyclic reminders</string>
+    <string name="cycle_reminder">Cyclic reminder</string>
     <string name="weekday_limited">Limited to some weekdays</string>
     <string name="reminders">Reminders</string>
     <string name="sort">Sort</string>
