--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -88,7 +88,7 @@
     <string name="every_day">Elke dag</string>
     <string name="cycle_pause_days">Pauzedagen</string>
     <string name="cycle_start_date">Start eerste cyclus</string>
-    <string name="cycle_reminders">Cyclische herinneringen</string>
+    <string name="cycle_reminder">Cyclische herinnering</string>
     <string name="weekday_limited">Beperkt tot sommige dagen van de week</string>
     <string name="reminders">Herinneringen</string>
     <string name="filter">Filter</string>
